<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:padding="20dp"
    tools:context=".Register">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/loginimg" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxViewPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#005485"
            android:textColor="#005486"
            android:layout_gravity="end"
            android:layout_marginBottom="0dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/view_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/roleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher" />

        <RadioButton
            android:id="@+id/radioStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#005486"
        android:textColor="#EBCC39"
        android:textStyle="bold"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/register"
        app:cornerRadius="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#005486"
        android:text="@string/click_to_login"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>